--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
     </header>
     <main>
         <div class="selection">
-            <p>Choose your mark (Player 1):</p>
-            <button class="mark" value="X">X</button>
-            <button class="mark" value="O">O</button>
+            <p>Choose your mark:</p>
+            <div class="picks">
+                <button class="mark" value="X">X</button>
+                <button class="mark" value="O">O</button>
+            </div>
+            <button id="play">Play</button>
         </div>
+
         <div class="display-picks">
             <div class="player1"></div>
             <div class="player2"></div>
         </div>
         <div class="display-result"></div>
-        <div class="gameboard" id="gameBoard">
-            
-        </div>
+        <div class="gameboard" id="gameBoard"></div>
         <div class="reset-game"></div>
+
     </main>
 </body>
 </html>
