--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     </header>
     <main>
         <div class="selection">
-            <p>Choose your mark:</p>
+            <p>Player 1 choose your mark:</p>
             <div class="picks">
                 <button class="mark" value="X">X</button>
                 <button class="mark" value="O">O</button>
             </div>
             <button id="play">Play</button>
         </div>
-
         <div class="display-picks">
             <div class="player1"></div>
             <div class="player2"></div>
